<resources>
    <string name="app_name">LoveMeter</string>
    <string name="log_in">Log In</string>
    <string name="btn_take_photo">Take A Photo</string>
    <string name="btn_pickAPhoto" />
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="btn_pickaPhoto">Pick A Photo</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="btnTestAFriend">Test A Friend</string>
    <string name="btnCheckYourBoard">Check Your Board</string>
    <string name="btnAddToTest">Add To Test</string>
    <string name="btnAddQuestion">ADD QUESTION</string>
    <string name="addLastQuestion">ADD LAST QUESTION</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="testnumber">testNumber</string>
    <string name="useremail">userEmail</string>
    <string name="testername">testerName</string>
    <string name="users">users</string>
    <string name="tests">tests</string>
    <string name="youshouldanswerthequestion">You should answer the question !</string>
    <string name="showresult">Show Result !</string>
    <string name="youloveyourfriend">you love your friend</string>
    <string name="percentage">%</string>
    <string name="profilepicture">profilePicture</string>
    <string name="title">Title</string>
    <string name="somethingwentwrong">Something went wrong</string>
    <string name="youhaventpickedimage">You haven\'t picked Image</string>
    <string name="requestpermissionfailed">request permission failed</string>
    <string name="youhaveregisteredbefore">you have registered before</string>
    <string name="waittouploadimage">Wait to upload the Image</string>
    <string name="youshouldprovidequestionandanswer">You should provide a question and an answer</string>
    <string name="usernameorpasswordiswrong">username or password is wrong</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="answer">Answer</string>
    <string name="youaredone">You Are Done Go Back And Choose Another Friend Or Check Your Board ^_^</string>
    <string name="no_tests_for_you">No tests for you</string>
</resources>
